--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.searchInput {
+  display: flex;
+}
+
+ .input {
+  width: 300px;
+  height: 40px;
+  padding: 2px 10px;
+  background-color: gray; /* important to be same as searchIcon background-color */
+  border: 0;
+}
+
+.input:focus {
+  outline: none !important;
+}
+
+.searchIcon {
+  background-color: gray; /* important to be same as input background-color */
+  width: 50px;
+  height: auto;
+  place-items: center;
+  display: grid;
+}
+
+#closeBtn {
+  cursor: pointer;
+}
+
+.submitButton {
+  width: 100px;
+  height: 40px;
+  background-color: gray;
+  color: white;
+  border: none;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: darkgray;
 }
