--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,57 @@
     transform: rotate(360deg);
   }
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.searchInputs {
+  display: flex;
+}
+
+.input {
+  width: 300px;
+  height: 40px;
+  padding: 2px 10px;
+  background-color: $main-white;
+  border: 0;
+}
+
+.input:focus {
+  outline: none !important;
+}
+
+.searchIcon {
+  background-color: $main-white;
+  width: 50px;
+  height: auto;
+  /* place-items: center; */
+  display: grid;
+}
+
+#closeBtn {
+  cursor: pointer;
+}
+
+.dataResults {
+  display: flex;
+  flex-direction: column;
+  max-height: 160px;
+  overflow: hidden;
+  overflow-y: auto;
+  background-color: white;
+  width: 360px;
+  position: absolute;
+  margin-top: 40px;
+  padding: 0px 10px 5px;
+}
+
+.dataResult {
+  cursor: pointer;
+}
+
+.dataResult:hover {
+  background-color: grey;
+}
